# david

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: publish-crate.yml  release.yml  version-bump.yml
adr/: index.yaml
adr/records/configuration/: agent-setup.md
adr/records/delivery/: release-automation.md
adr/records/runtime/: agent-session.md
adr/records/worktree/: storage-and-lifecycle.md
src/: lib.rs  main.rs
tests/: cli_contracts.rs  noninteractive.rs
