[package]
name = "tony"
version = "0.1.0"
edition = "2024"
description = "Manage Git worktrees and attachable agent sessions"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.12", default-features = false }
serde = { version = "1", features = ["derive"] }
shell-words = "1.1"
thiserror = "2"
toml = "0.9"

[dev-dependencies]
tempfile = "3"
