[package]
name = "david"
version = "1.7.0"
edition = "2024"
description = "Manage Git worktrees and attachable agent sessions"
homepage = "https://github.com/jwoo0122/david"
license = "MIT"
repository = "https://github.com/jwoo0122/david"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.12", default-features = false }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
shell-words = "1.1"
thiserror = "2"
toml = "0.9"

[dev-dependencies]
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
